Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.1
-
None
-
-
a3fb2051add168a3bc29f0bd4f83f1c4d6fb86a8 (qt-creator/qt-creator/4.10)
Description
Here are some results of the broken reformat QML file tool:
- property T.Control myControl
- property T.Popup myPopup
+ property T myControl
+ property T myPopup
- property T.Control myControl
+ property T myControl
- textFromValue: function (value, locale) {
+ textFromValue: function (valuelocale) {
- function clamp(v, lo, hi) {
+ function clamp(vlohi) {
Attachments
For Gerrit Dashboard: QTCREATORBUG-22515 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
264299,3 | QmlJS: Fix code re-formatter for property | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |