tests/auto/qml/reformatter/qmlsyntax.qml
@@ -9,6 +9,8 @@ Text {
     property int foo
     property alias bar: x
     property list<QtObject> pro
+    property Part.Particles particles
+    property list<Part.Particles> particlesList
     default property int def
     property var baz: Rectangle {
         width: 20
